# graphic_editor

./: CMakeLists.txt  figure.cpp  figure.h  graphic_editor.cpp  graphic_editor.h  main.cpp
